<resources>
    <string name="app_name">Tablayout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">UserName</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="whatsapp">WhatsApp</string>
</resources>